Removed the internal state of the REPL and added tests